finishing project one

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="text-area">
           <span class="quote"> "This is the Quote" </span>
         </div>
-        <div class="person">Abe Linc</div>
+        <div class="author">Abe Linc</div>
 
         <div class="button-area">
           <button id="new-quote">New Quote</button>
